--- a/css/home-1440-create-account.css
+++ b/css/home-1440-create-account.css
@@ -187,7 +187,7 @@
   align-items: center;
   backdrop-filter: blur(20px) brightness(100%);
   background: radial-gradient(50% 50% at 50% 50%, rgba(65, 182, 230, 0.8) 0%, rgba(0, 71, 187, 0.8) 55%, rgba(0, 51, 153, 0.8) 100%);
-  border-radius: 24px 24px 0px 0px;
+  border-radius: 24px;
   display: flex;
   flex-direction: column;
   min-height: 673px;
@@ -866,11 +866,14 @@
   top: 6733px;
 }
 
+.home-1440-create-account .btn_-principal:hover {
+  background: var(--aiod-gradient-azul-button-hover);
+}
 .home-1440-create-account .btn_-principal {
+  cursor: pointer;
   align-items: flex-start;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(65, 182, 230) 0%, rgb(0, 71, 187) 55%, rgb(0, 51, 153) 100%);
-  border: 1px solid;
-  border-color: transparent;
+  background: var(--aiod-gradient-azul-button);
+  border: 1px solid transparent !important;
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%) 1;
   border-radius: 100px;
   display: flex;
@@ -1050,8 +1053,7 @@
 .home-1440-create-account .bt-4 {
   align-items: center;
   background-color: var(--blue-2);
-  border: 1px solid;
-  border-color: transparent;
+  border: 1px solid transparent !important;
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 53.65%, rgba(255, 255, 255, 0) 100%) 1;
   gap: 8px;
   justify-content: center;
