--- a/css/home-1440.css
+++ b/css/home-1440.css
@@ -62,13 +62,13 @@
 .home-1440 .a-io-d-project {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
-  height: 51px;
+  height: 92px;
   left: 496px;
   line-height: 32px;
   text-fill-color: transparent;
-  top: 338px;
+  top: 315px;
 }
 
 .home-1440 .group-22 {
@@ -82,13 +82,27 @@
   top: 468px;
 }
 
-.home-1440 .bt {
+.home-1440 .bt:hover, .home-1440 .bt-1:hover {
+  background: var(--aiod-gradient-azul-button-hover);
+}
+
+.home-1440 .bt, .home-1440 .bt-1 {
   align-items: flex-start;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(65, 182, 230) 0%, rgb(0, 71, 187) 55%, rgb(0, 51, 153) 100%);
+  background: var(--aiod-gradient-azul-button);
   border-radius: 100px;
+  cursor: pointer;
   display: flex;
   justify-content: center;
+
+}
+
+
+.home-1440 .bt {
   min-width: 174px;
+}
+
+.home-1440 .bt-1 {
+  min-width: 144px;
 }
 
 .home-1440 .overlap-group-1 {
@@ -99,8 +113,7 @@
 }
 
 .home-1440 .rectangle-94 {
-  border: 1px solid;
-  border-color: transparent;
+  border: 1px solid transparent !important;
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%) 1;
   border-radius: 100px;
   height: 60px;
@@ -125,13 +138,6 @@
   position: relative;
 }
 
-.home-1440 .bt-1 {
-  align-items: flex-start;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(65, 182, 230) 0%, rgb(0, 71, 187) 55%, rgb(0, 51, 153) 100%);
-  justify-content: center;
-  min-width: 144px;
-}
-
 .home-1440 .overlap-group1 {
   border-radius: 100px;
   height: 60px;
@@ -149,50 +155,49 @@
 .home-1440 .the-a-io-d-community {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
   left: 205px;
   letter-spacing: -2.60px;
-  line-height: 52px;
+  line-height: 82px;
   position: absolute;
   text-fill-color: transparent;
-  top: 845px;
+  top: 815px;
   width: 288px;
 }
-
 .home-1440 .a-cluster-of-organiz-1 {
-  left: 206px;
-  top: 5670px;
+  left: 746px;
+  top: 5400px;
 }
-
 .home-1440 .a-cluster-of-organizations {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
-  left: 206px;
+  left: 746px;
   line-height: 30px;
   text-fill-color: transparent;
-  top: 5625px;
+  top: 5295px;
+  height:200px;
   white-space: nowrap;
 }
 
 .home-1440 .a-cluster-of-organiz-2 {
-  left: 735px;
-  top: 5952px;
+  left: 205px;
+  top: 5692px;
 }
 
 .home-1440 .a-cluster-of-organizations-1 {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
-  left: 735px;
+  left: 205px;
   letter-spacing: 0;
   line-height: 30px;
   position: absolute;
   text-fill-color: transparent;
-  top: 5907px;
+  top: 5607px;
   white-space: nowrap;
 }
 
@@ -293,16 +298,16 @@
 .home-1440 .view-current-project {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
-  height: 14px;
+  height: 44px;
   left: 466px;
   letter-spacing: 0;
-  line-height: 44px;
+  line-height: 74px;
   position: absolute;
   text-align: center;
   text-fill-color: transparent;
-  top: 4091px;
+  top: 4081px;
   white-space: nowrap;
 }
 
@@ -648,18 +653,18 @@
 
 .home-1440 .group-713-1 {
   background-image: url(../img/btn-principal-5.svg);
-  left: 206px;
+  left: 736px;
   min-width: 152px;
   padding: 0 33px;
-  top: 5773px;
+  top: 5483px;
 }
 
 .home-1440 .group-713-2 {
   background-image: url(../img/btn-principal-6.svg);
-  left: 735px;
+  left: 195px;
   min-width: 152px;
   padding: 0 33px;
-  top: 6054px;
+  top: 5774px;
 }
 
 .home-1440 .group-713-3 {
@@ -732,9 +737,8 @@
 
 .home-1440 .bt-3 {
   align-items: flex-end;
-  border: 1px solid;
-  border-color: transparent;
-  border-image: linear-gradient(to bottom, rgb(0, 71, 187), rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%) 1;
+  border-width: 1px;
+  border-style: solid;
   height: 44px;
   min-width: 44px;
   padding: 14px 15px;
@@ -806,7 +810,7 @@
 
 .home-1440 .card01-2 {
   left: 1147px;
-  padding: 0px 0px 18px;
+  padding: 0px 0px 32px;
   top: 3245px;
   width: fit-content;
 }
@@ -839,8 +843,7 @@
 .home-1440 .bt-4 {
   align-items: center;
   background-color: var(--blue-2);
-  border: 1px solid;
-  border-color: transparent;
+  border: 1px solid transparent !important;
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 53.65%, rgba(255, 255, 255, 0) 100%) 1;
   cursor: pointer;
   gap: 8px;
