--- a/css/contribute.css
+++ b/css/contribute.css
@@ -200,8 +200,7 @@
 }
 
 .contribute .rectangle-94 {
-  border: 1px solid;
-  border-color: transparent;
+  border: 1px solid transparent !important;
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%) 1;
   border-radius: 100px;
   height: 60px;
