--- a/css/news-search-1440.css
+++ b/css/news-search-1440.css
@@ -82,7 +82,7 @@
 .news-search-1440 .title {
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
   left: 1px;
   letter-spacing: -2.60px;
@@ -435,6 +435,11 @@
   width: 237px;
 }
 
+.group-7.mis-align {
+  position: relative;
+  top: -77px;
+}
+
 .news-search-1440 .search-on-title-and-body {
   height: 24px;
   letter-spacing: 0;
@@ -578,6 +583,8 @@
   margin-left: 2.0px;
   min-height: 78px;
   width: 237px;
+  position: relative;
+  top: 30px;
 }
 
 .news-search-1440 .related-project {
@@ -731,12 +738,16 @@
   width: 140px;
 }
 
+.news-search-1440 .btn_-principal-1:hover {
+  background: var(--aiod-gradient-azul-button-hover);
+}
+
 .news-search-1440 .btn_-principal-1 {
   align-items: flex-start;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(65, 182, 230) 0%, rgb(0, 71, 187) 55%, rgb(0, 51, 153) 100%);
-  border: 1px solid;
-  border-color: transparent;
-  border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%) 1;
+  cursor: pointer;
+  background: var(--aiod-gradient-azul-button);
+  box-shadow: inset 1px 2px 2px -2px rgba(255, 255, 255, 0.5),
+  inset -1px -2px 2px -2px rgba(255, 255, 255, 0.25);
   border-radius: 100px;
   display: flex;
   gap: 8px;
@@ -829,14 +840,14 @@
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent;
   align-self: flex-start;
-  background: linear-gradient(180deg, rgb(0, 71, 187) 0%, rgb(65, 182, 230) 51.04%, rgb(255, 237, 0) 100%);
+  background: var(--aiod-gradient);
   background-clip: text;
-  height: 20px;
+  height: 40px;
   letter-spacing: 0;
   line-height: 44px;
   margin-bottom: -24px;
   margin-left: 205px;
-  margin-top: 88px;
+  margin-top: 68px;
   text-fill-color: transparent;
   white-space: nowrap;
   z-index: 3;
@@ -872,6 +883,9 @@
   line-height: 18.2px;
   position: relative;
   width: 166px;
+}
+.irida-labs-to-exhibi a {
+  color: inherit;
 }
 
 .news-search-1440 .well-be-at-embedded {
