Fix: Fixed menu on misc pages

--- a/css/news-search-1440.css
+++ b/css/news-search-1440.css
@@ -381,7 +381,7 @@
   z-index: 13;
 }
 
-.news-search-1440 .menu {
+.news-search-1440 .menu-x {
   height: 44px;
   min-width: 89px;
   position: relative;
