--- a/css/news-single-page.css
+++ b/css/news-single-page.css
@@ -370,7 +370,7 @@
   z-index: 6;
 }
 
-.news-single-page .menu {
+.news-single-page .menu-x {
   height: 44px;
   min-width: 89px;
   position: relative;
