--- a/css/main.css
+++ b/css/main.css
@@ -144,3 +144,18 @@ body {
 .menu {
     background: linear-gradient(180deg, rgba(var(--aiod-c-black-rgb), 1) 40%, rgba(var(--aiod-c-black-rgb), 0) 100%);
 }
+
+.login-button {
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    background-color: var(--blue-2);
+    border: 1px solid transparent !important;
+    border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.25) 53.65%, rgba(255, 255, 255, 0) 100%) 1;
+    cursor: pointer;
+    gap: 8px;
+    justify-content: center;
+    padding: 10px 16px;
+    position: relative;
+    width: fit-content;
+}
