--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,14 @@ body {
     width: fit-content;
 }
 
+.login-picture {
+    background-image: url(../img/rectangle-44.svg);
+    background-size: 100% 100%;
+    height: 44px;
+    min-width: 44px;
+    position: relative;
+}
+
 .under-construction {
     position: fixed;
     top: 80%;
