--- a/css/globals.css
+++ b/css/globals.css
@@ -1,5 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,200,700,600|Jura:400,600,300,500,700");
+@import url("https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700");
 
 .screen a {
   display: contents;
