--- a/css/news-single-page.css
+++ b/css/news-single-page.css
@@ -94,11 +94,24 @@
   white-space: nowrap;
 }
 
-.news-single-page .irida-labs-to-exhibi {
-  color: var(--white);
+.typo-title {
   font-family: var(--font-family-jura);
   font-size: 32px;
   font-weight: 300;
+}
+
+.typo-summary {
+  color: var(--white);
+  font-family: var(--font-family-jura);
+  font-size: var(--font-size-s);
+  font-style: normal;
+  font-weight: 400;
+  opacity: 0.6;
+}
+
+
+.news-single-page .irida-labs-to-exhibi {
+  color: var(--white);
   height: 58px;
   left: 311px;
   letter-spacing: 0;
@@ -196,7 +209,6 @@
   left: 311px;
   letter-spacing: 0;
   line-height: 25.6px;
-  opacity: 0.6;
   position: absolute;
   top: 550px;
   width: 816px;
